# flynet

./: README.md  pyproject.toml
examples/: flynet_training_loss.csv  history_example.pkl  plot_loss.py  train_flynet.py
flynet/: EKF_filter.py  FilterPlots.py  FlyNet.py  FlyNet_main.py  ImgViewer1.py  ImgViewer2.py  KF_filter.py  NetworkViewer.py  PostProcessing.py  __init__.py  fly_net.ui  fly_net_ui.py
flynet/drosophila/: abdomen.stl  head.stl  membrane_0_L.stl  membrane_0_R.stl  membrane_1_L.stl  membrane_1_R.stl  membrane_2_L.stl  membrane_2_R.stl  membrane_3_L.stl  membrane_3_R.stl  model.py  model_parameters.json  thorax.stl  vein_0_L.stl  vein_0_R.stl  vein_1_L.stl  vein_1_R.stl  vein_2_L.stl  vein_2_R.stl  vein_3_L.stl  vein_3_R.stl  vein_4_L.stl  vein_4_R.stl  vein_5_L.stl  vein_5_R.stl  vein_A_L.stl  vein_A_R.stl  vein_C1_L.stl  vein_C1_R.stl  vein_C2_L.stl  vein_C2_R.stl  vein_C3_L.stl  vein_C3_R.stl  vein_P_L.stl  vein_P_R.stl
